--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,10 @@ dependencies = [
     "ipykernel>=6.29.5",
     "langchain>=0.3.26",
     "langchain-community>=0.3.26",
+    "langchain-text-splitters>=0.3.8",
     "pymupdf>=1.26.1",
     "pypdf>=5.6.1",
     "python-dotenv>=1.1.1",
+    "tiktoken>=0.9.0",
     "wikipedia>=1.4.0",
 ]
