--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "ipykernel>=6.29.5",
     "langchain>=0.3.26",
     "langchain-community>=0.3.26",
+    "langchain-ollama>=0.3.3",
     "langchain-openai>=0.3.25",
     "langchain-text-splitters>=0.3.8",
     "pymupdf>=1.26.1",
