--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,14 @@ dependencies = [
     "ipykernel>=6.29.5",
     "langchain>=0.3.26",
     "langchain-community>=0.3.26",
+    "langchain-huggingface>=0.3.0",
     "langchain-ollama>=0.3.3",
     "langchain-openai>=0.3.25",
     "langchain-text-splitters>=0.3.8",
     "pymupdf>=1.26.1",
     "pypdf>=5.6.1",
     "python-dotenv>=1.1.1",
+    "sentence-transformers>=5.0.0",
     "tiktoken>=0.9.0",
     "wikipedia>=1.4.0",
 ]
