--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10,<3.11"
 dependencies = [
     "arxiv>=2.2.0",
     "bs4>=0.0.2",
+    "faiss-cpu>=1.11.0",
     "ipykernel>=6.29.5",
     "langchain>=0.3.26",
     "langchain-community>=0.3.26",
