--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,11 @@ requires-python = ">=3.10,<3.11"
 dependencies = [
     "arxiv>=2.2.0",
     "bs4>=0.0.2",
+    "chromadb>=1.0.15",
     "faiss-cpu>=1.11.0",
     "ipykernel>=6.29.5",
     "langchain>=0.3.26",
+    "langchain-chroma>=0.2.4",
     "langchain-community>=0.3.26",
     "langchain-huggingface>=0.3.0",
     "langchain-ollama>=0.3.3",
