--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10,<3.11"
 dependencies = [
     "arxiv>=2.2.0",
+    "beautifulsoup4>=4.13.4",
     "bs4>=0.0.2",
     "chromadb>=1.0.15",
     "faiss-cpu>=1.11.0",
