--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,14 +10,18 @@ dependencies = [
     "bs4>=0.0.2",
     "chromadb>=1.0.15",
     "faiss-cpu>=1.11.0",
+    "fastapi>=0.116.0",
     "ipykernel>=6.29.5",
     "langchain>=0.3.26",
     "langchain-chroma>=0.2.4",
     "langchain-community>=0.3.26",
+    "langchain-core>=0.3.68",
+    "langchain-groq>=0.3.5",
     "langchain-huggingface>=0.3.0",
     "langchain-ollama>=0.3.3",
     "langchain-openai>=0.3.25",
     "langchain-text-splitters>=0.3.8",
+    "langserve>=0.3.1",
     "pymupdf>=1.26.1",
     "pypdf>=5.6.1",
     "python-dotenv>=1.1.1",
