--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "pypdf>=5.6.1",
     "python-dotenv>=1.1.1",
     "sentence-transformers>=5.0.0",
+    "sse-starlette>=3.0.2",
     "streamlit>=1.46.1",
     "tiktoken>=0.9.0",
     "wikipedia>=1.4.0",
