renamed app --> simple-graph

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "langchain-ollama>=0.3.3",
     "langchain-openai>=0.3.25",
     "langchain-text-splitters>=0.3.8",
+    "langgraph>=0.6.3",
     "langserve>=0.3.1",
     "pymupdf>=1.26.1",
     "pypdf>=5.6.1",
