--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "faiss-cpu>=1.11.0",
     "fastapi>=0.116.0",
     "ipykernel>=6.29.5",
+    "ipython>=8.37.0",
     "langchain>=0.3.26",
     "langchain-chroma>=0.2.4",
     "langchain-community>=0.3.26",
